# rust-hwsystem-next

./: .env.example  .gitignore  API_Document.md  CONFIG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.development.toml  config.example.toml  config.production.toml  config.toml
.github/workflows/: docker-image.yml
database/: DATABASE.md  schema.sql
database/migrations/: V1__init_migration_table.sql
src/: errors.rs  main.rs  models.rs
src/api_models/: mod.rs
src/api_models/auth/: requests.rs  responses.rs
src/api_models/common/: error_code.rs  mod.rs  response.rs
src/api_models/files/: entities.rs  mod.rs  requests.rs  responses.rs
src/api_models/homeworks/: entities.rs  mod.rs  requests.rs  responses.rs
src/api_models/users/: entities.rs  mod.rs  requests.rs  responses.rs
src/cache/: macros.rs  mod.rs  register.rs  traits.rs
src/cache/object_cache/: moka.rs  redis.rs
src/domain/: mod.rs
src/domain/auth/: login.rs  mod.rs  register.rs  token.rs
src/domain/class_students/: join.rs  list.rs  mod.rs  update.rs
src/domain/class_users/: delete.rs  get.rs  join.rs  list.rs  mod.rs  update.rs
src/domain/classes/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/domain/files/: download.rs  mod.rs  upload.rs
src/domain/homeworks/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/domain/system/: mod.rs  settings.rs
src/domain/users/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/middlewares/: mod.rs  require_class_role.rs  require_jwt.rs  require_role.rs
src/models/: mod.rs
src/models/auth/: mod.rs  requests.rs  responses.rs
src/models/class_student/: entities.rs  mod.rs  (+2 more)
src/repository/: macros.rs  mod.rs  register.rs
src/routes/: auth.rs  class_students.rs  class_users.rs  classes.rs  files.rs  health.rs  homeworks.rs  mod.rs  system.rs  users.rs
src/services/: auth.rs  jwt.rs  mod.rs  users.rs
src/storages/: macros.rs  mod.rs  models.rs  register.rs
src/system/: app_config.rs  mod.rs
src/utils/: db.rs  extractor.rs  jwt.rs  jwt_utils.rs  mod.rs  parameter_error_handler.rs  password.rs  random_code.rs  sqlx_macros.rs  validate.rs
(+72 files in other folders)
