[package]
name = "rust-hwsystem-next"
version = "0.0.1"
description = "A next-generation hardware system for Rust"
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

# 优化配置
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
actix-web = "4.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2.3"
jsonwebtoken = "9.3.1"
num_cpus = "1.17.0"
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
env = "1.0.1"
rustls = "0.23.28"
redis = { version = "0.32.3", features = ["tokio-comp", "tokio-rustls-comp"] }
async-trait = "0.1.88"
once_cell = "1.21.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "mysql", "chrono"] }
ctor = "0.4.2"
argon2 = "0.5"
sha2 = "0.10"
serde_with = "3.14.0"
base64 = "0.22.1"
futures-util = "0.3.31"
actix-cors = "0.7.1"
